[package]
name = "pn"
version = "0.0.0"
authors = ["Zoltan Kochan <z@kochan.io>"]
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "1.9.3", features = ["serde"] }
yansi = "0.5.1"
derive_more = "0.99.14"
pipe-trait = "0.4.0"
clap = { version = "4.3.2", features = ["derive"] }
lets_find_up = "0.0.3"
itertools = "0.10.5"
dunce = "1.0.4"
strum = { version = "0.25.0", features = ["phf", "derive"] }

[dev-dependencies]
assert_cmd = "2.0.5"
build-fs-tree = "0.5.0"
tempfile = "3.5.0"
pretty_assertions = "1.3.0"
